small overflow fix and more pics

--- a/css/stylePhoto.css
+++ b/css/stylePhoto.css
@@ -41,6 +41,7 @@ body {
     height: 100%;
     margin: 0;
     user-select: none;
+    overflow-x: hidden !important;
 }
 
 img {
